# RCardEngine

./: .gitignore  CDSL_ver_2.cdsl  CDSLv.0.3.cdsl  CHANGELOG.md  CardDSL.cdsl  CardEngine.cabal  Cargo.toml  GRAMMAR  Haskell-Project.cabal  LICENSE  README.md  package.yaml  stack.yaml  testss
app/: Main.hs
examples/: EmptyGame.lua  TurnEight.lua
games/: CardDSL.cdsl  DefaultGame.gdsl  DefaultGame.txt  President.cdsl  TurnEight.cdsl  TurnEight.gdsl  TurnEight.txt  test.cdsl  uno.cdsl
src/: CDSLExpr.hs  Card.hs  Commands.hs  Constants.hs  ExecCDSLExpr.hs  Feature.hs  Functions.hs  GD.hs  Game.hs  GameCommands.hs  GameEditor.hs  GameExprError.hs  GameRules.hs  LoadGD.hs  LoadGame.hs  OldMain.hs  ParseCardDSL.hs  ParseExpr.hs  PlayGame.hs  Player.hs  PlayerMove.hs  SaveGD.hs  feature.rs  functions.rs  game.rs  lib.rs  main.rs
src/CDSL/: CDSLAST.hs  CDSLExpr.hs  CDSLLexer.hs  CDSLParser.hs  CDSLTokenizer.hs  CDSLValidater.hs  ExecCDSLExpr.hs  Expr.rs  ParseCDSL.hs  ParseCDSLExpr.hs  ParseCardDSL.hs  Parser.rs  exec.rs  expr.rs  mod.rs  parser.rs
src/CardGame/: Card.hs  Card.rs  CardFunctions.hs  Game.hs  Game.rs  PlayCommands.hs  PlayGame.hs  Player.hs  Player.rs  PlayerMove.hs  card.rs  game.rs  mod.rs  player.rs
src/CircularList/: circular_list.rs  circular_list_test.rs  mod.rs
src/GameData/: DebugGD.hs  GD.hs  LoadGD.hs  SaveGD.hs  game_data.rs
src/Terminal/: ExecGameCommands.hs  GameCommands.hs  GameTerminal.hs  ValidateGameCommands.hs
src/cdsl/: algebra.rs  eval.rs  expr.rs  interface.rs  mod.rs  proc.rs  sign.rs  stmt.rs
src/engine/: card.rs  game.rs  mod.rs  plr.rs
src/errors/: mod.rs
src/game/: card.rs  mod.rs  player.rs
src/parser/: mod.rs  validator.rs
src/prelude/: ops.rs
src/tests/: mod.rs
src/tests/cdsl/: mod.rs
test/: CDSLTokenizerSpec.hs  FunctionsSpec.hs  Spec.hs
test/CDSL/: CDSLSpec.hs
test/CDSLExprTest/: CDSLLoaderSpec.hs  CDSLParseExprSpec.hs  CDSLParseIfExprSpec.hs  CDSLParseListSpec.hs  CDSLParsePlayerActionSpec.hs  CDSLParserSpec.hs  CDSLValidationSpec.hs  CardDSL.cdsl  ValidateFeatureSpec.hs
tests/: card_game_test.rs  circular_list_test.rs
