cabal-version: 1.12

name:           CardEngine
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Neelzee/CardEngine#readme>
homepage:       https://github.com/Neelzee/CardEngine#readme
bug-reports:    https://github.com/Neelzee/CardEngine/issues
author:         Nils Michael Fitjar
maintainer:     nilsien2001@gmail.com
copyright:      2023 Nils Michael Fitjar
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/Neelzee/CardEngine

library
  exposed-modules:
      CardGame.Card
      CardGame.Game
      CardGame.PlayGame
      CardGame.Player
      CardGame.PlayerMove
      CardGame.PlayCommands
      CardGame.CardFunctions
      Functions
      GameEditor
      GameData.GD
      GameData.LoadGD
      GameData.SaveGD
      Constants
      CDSL.ParseCardDSL
      CDSL.CDSLExpr
      CDSL.ExecCDSLExpr
      CDSL.CDSLValidater
      Feature
      LoadGame
      Terminal.GameCommands
      Terminal.ValidateGameCommands
      Terminal.ExecGameCommands
      Terminal.GameTerminal
  other-modules:
      Paths_CardEngine
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , data-clist
    , directory
    , edit-distance
    , extra
    , filepath
    , optparse-applicative
    , text
    , random
    , ansi-terminal
    , containers
  default-language: Haskell2010

executable CardEngine-exe
  main-is: Main.hs
  other-modules:
      Paths_CardEngine
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      CardEngine
    , base
    , data-clist
    , directory
    , edit-distance
    , extra
    , filepath
    , optparse-applicative
    , text
    , time
    , bytestring
    , ansi-terminal
    , containers
  default-language: Haskell2010

test-suite CardEngine-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_CardEngine
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      CardEngine
    , base >=4.7 && <5
    , data-clist
    , directory
    , edit-distance
    , extra
    , filepath
    , optparse-applicative
    , text
    , time
    , bytestring
    , ansi-terminal
    , random
    , hspec
  default-language: Haskell2010
