[package]
name = "rcard_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
lua-src = "546.0.2"
mlua = { version = "0.9.6", features = ["lua51", "vendored", "serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
